--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -14,3 +14,4 @@ serde = "1.0.197"
 serde_json = "1.0.115"
 tokio = { version = "1.37.0", features = ["full"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tower = "0.4.13"
