feat: Header auth field switch

--- a/example.env
+++ b/example.env
@@ -3,3 +3,4 @@ PORT=8099
 DATABASE_URL='postgres://arpacik:GRoButChN43Wrzt5IXs6hBzLGtFKnRxz@localhost:5499/sogan'
 DATABASE_SCHEMA='arpacik'
 JWT_SECRET='VcHCJhYoXGGL7awzIL6woA=='
+AUTH_FROM='authorization'
